--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const latestRelease = getLatestRelease();
 					<div class="relative w-64 md:w-80 lg:w-96 logo-container cursor-pointer">
 						<!-- Static Logo (shown by default) -->
 						<img 
-							src="/inzies-band/LogoAnimations/logo-transparent.png" 
+							src="/inzies/LogoAnimations/logo-transparent.png" 
 							alt="Inzies Logo"
 							class="w-full h-auto logo-static"
 						/>
@@ -46,7 +46,7 @@ const latestRelease = getLatestRelease();
 								playsinline
 								class="logo-video"
 							>
-								<source src="/inzies-band/LogoAnimations/Logo%2016%20-%209.mp4" type="video/mp4" />
+								<source src="/inzies/LogoAnimations/Logo%2016%20-%209.mp4" type="video/mp4" />
 							</video>
 						</div>
 					</div>
@@ -95,7 +95,7 @@ const latestRelease = getLatestRelease();
 						We put our beats on Strudel. You can mess with them, remix them, whatever.
 					</p>
 					<GlowButton 
-						href="/inzies-band/play/" 
+						href="/inzies/play/" 
 						variant="primary" 
 						size="lg"
 						icon="material-symbols:code"
